--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!--CONTENT-->
 <div id="portafolio">
   <div class="container">
-    <div class="row row-portafolio">
+    <div class="row row-portafolio content">
 
       <div class="img-portafolio col-sm-8">
         <img src="img/header.png"/>
@@ -70,7 +70,7 @@
 <div id="services">
   <div class="container container-services">
 <!--MENU PROJECTS-->    
-    <div class="row row-services">
+    <div class="row row-services content">
         
       <div class="col-sm-6 pull-left">
         <h4>LATEST PROJECTS</h4>
@@ -81,27 +81,23 @@
         </ul><!--projects-menu-->
       </div>
 
-      <div>
-       <ul class="">
-        <li><a href="#"><img src=""></a></li>
-        <li><a href="#"><img src=""></a></li>
-        <li><a href="#"><img src=""></a></li>
-        </ul><!--projects-menu-->
+      <div class="col-sm-6 iconos">
+          <span class="glyphicon glyphicon-th"></span> <span class="glyphicon glyphicon-tasks"></span> <span class="glyphicon glyphicon-th-large"></span> <span class="glyphicon glyphicon-th-list"></span>
       </div>
 
     </div><!--row-servicess-->
 <!--PORTAFOLIO-->
-    <div class="row row-portafolio">
+    <div class="row row-portafolio content">
       <div class="col-sm-12 col-md-6">
         <div class="foto">
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
               </div>  
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
@@ -114,11 +110,11 @@
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
               </div> 
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
@@ -127,17 +123,17 @@
       </div><!--col 12-->
     </div><!--row 1-->
 
-    <div class="row row-portafolio">
+    <div class="row row-portafolio content">
       <div class="col-sm-12 col-md-6">
         <div class="foto">
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
               </div>  
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
@@ -150,11 +146,11 @@
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
               </div> 
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
@@ -163,17 +159,17 @@
       </div><!--col 12-->
     </div><!--row 2-->
 
-    <div class="row row-portafolio">
+    <div class="row row-portafolio content">
       <div class="col-sm-12 col-md-6">
         <div class="foto">
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
               </div>  
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
@@ -186,37 +182,133 @@
           <img src="img/main-pic.png" alt="" />
             <div class="caption">
               <div class="row likes">
-                <div class="col-sm-9">
+                <div class="col-sm-9 cappuccino">
                   <h5><strong>Cappuccino Catcher Urna Placerat Ornare</strong></h5>
                 </div>
-                <div class="col-sm-3">
-                  <a href=""><img src=""> 1598 <img src=""> 175</a>
+                <div class="col-sm-3 eye-heart">
+                 <span class="glyphicon glyphicon-eye-open"></span> 1598 <span class="glyphicon glyphicon glyphicon-heart"></span> 175
                 </div>
-              </div> 
+              </div>  
               <p>MarK lawreson cream bun disaster groucho-a-like brandy yeoman farmer hairy kid at school? By jingo, dolor sit amet wario, mustachioed by jingo, wario dolor sit amet albert</p>
             </div>
         </div><!--thumbnail-->
       </div><!--col 12-->
+
     </div><!--row 3-->
 
-    <div class="row row-button text-center">
+    <div class="row row-button text-center content">
     <button type="button" class="btn btn-default btn-lg btn-load active ">Load More</button>
     </div>   
 
   </div><!--container-services-->
 </div><!--services-->
 
-<!--CONTACT-->
+<!--BLOG-->
 <div id="blog">
   <div class="container">
-    <div class="row">
+    <div class="row blog-row">
         <div class="col-sm-12">
-          <h4>My latest WordPress theme, The Gentleman, just lunched! This Theme has attitude. Chack it out at ThemeForest:<a href="#"><em>http://t.co/asdasda</a>-I week ago</em></ph4>
-        </div>
-    </div>   
+
+          <div class="col-sm-2 twitter text-center">
+            <img src="img/pajarito.png"/>
+            <button type="button" class="btn btn-default btn-lg btn-follow active ">Follow</button>
+          </div>
+          <div class="col-sm-10 blog-content">
+            <h4>My latest WordPress theme, The Gentleman, just lunched! This Theme has attitude. Chack it out at ThemeForest:<a href="#"><em>http://t.co/asdasda </a>- I week ago</em></a></h4>
+          </div>
+
+        </div><!--col 12-->
+    </div><!--blog-row-->   
+  </div><!--container-->
+</div><!--end blog-->
+
+<!--FOOTER-->
+<div class="footer">
+  <div class="container">
+  <div class="row footer">
+    <div class="row">
+
+      <div class="col-sm-3 footer-logo">
+        <h3 class="text-center">The <strong>Gentleman</strong></h3>
+        <a href="#"><img src="img/contact.png"/></a>
+      </div >
+
+      <div class="col-sm-6 footer-text text-center">
+        <p>Alpha trion ned flanderss leader of men I drink your milkshake, lady magnets handlebar basil fawlty che quevara leader of men dis off-piste flanders luxurious.</p>
+      </div>
+
+      <div class="col-sm-3">
+        <ul class="nav">
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">Bran Identify</a></li>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">Movile Applications</a></li>
+        </ul><!--web-desing-->
+      </div>  
+
+    </div><!--end row-->
+
+<div class="row row-center">
+
+    <div class="col-sm-3 clients">
+      <h5>Clients</h5>
+        <h6>Oliviu Stoian - Webstar Designer</h6>
+          <div class="row">
+            <div class=" col-sm-2 quote"><img src="img/quote.png"/></div>
+            <div class="col-sm-10 text-quote"><p>Mr frothy-top beefeater dickie davies frontiersman godlike old man in pub,mr  frothy-top frontiersman Freddie mercury Nostrilis tickler</p></div>
+          </div>
+        <h6>Oliviu Stoian - Webstar Designer</h6>
+          <div class="row">
+            <div class=" col-sm-2 quote"><img src="img/quote.png"/></div>
+            <div class="col-sm-10 text-quote"><p>Landed gentry rock n roll star pencil dick dastardly groucho marx prince barin tache. Success cream.</p></div>
+          </div>
+    </div>
+
+    <div class="col-sm-3">
+      <div class="row">
+        <div class="pull-left"><h5>Twitter Updates</h5></div>
+        <div class="pull-right"><button type="button" class="pull-right btn btn-default btn-lg btn-follow active ">Follow</button></div>
+      </div>
+
+      <a href="#" class="pink">@oliviustoian</a><p class="text-enlace">For me because i deserve it. It tickles my ear so smooth...</p>
+      <a href="#" class="enlace">http://bit.ly/789456</a>
+      <a href="#" class="enlace">7 hours ago</a>
+      <br><br>
+      <a href="#" class="pink">@oliviustoian</a><p class="text-enlace">According to Smooth, @oliviustoian's Smooth score is 74. How influential are you? </p> <a href="#" class="enlace">http://bit.ly/123456</a>
+      <a href="#" class="enlace">12 hours ago</a>
+    </div>
+
+    <div class="col-sm-3 direc">
+      <h5>Address</h5>
+      <p>69-70 Silicon Valley <br> San Francisco, CA 99789</p>
+      <h6>view on map</h6>
+      <p class="number">1-800-275-2273</p>         
+    </div>
+
+    <div class="col-sm-3 new">
+      <h5>Newsletter</h5>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Your Email">
+        <span class="input-group-btn">
+          <button class="btn btn-default btn-send" type="button">SEND</button>
+        </span>
+      </div><!-- /input-group -->
+      <br><em><p class="do-not">We do not spam or sell emails.</p>
+      <p class="do-not">We desing beautifull wordpress themes</p></em>
+    </div>
+
+</div><!--end row-->
+
+    <div class="row text-center last-footer">
+      <div class="col-sm-12">
+      <p class="text-enlace">Copyrigth @ 2012 <a href="#" class="pink">The Gentleman</a> All rigths reserved. W3C standars website. Valid (x)html / css</p>
+      <div>
+    </div>
+  </div><!--container-->
+</div><!--footer-->
+
+</div>
   </div>
 </div>
-<!--FOOTER-->
-
 </body>
 </html>
